--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@reach/alert": "^0.12.1",
+    "@reach/checkbox": "^0.12.1",
+    "@reach/combobox": "^0.12.1",
+    "@reach/dialog": "^0.12.1",
+    "@reach/disclosure": "^0.12.1",
+    "@reach/tooltip": "^0.12.1",
+    "@types/nprogress": "^0.2.0",
     "autoprefixer": "^10.0.4",
+    "clsx": "^1.1.1",
+    "keen-slider": "^5.3.5",
     "next": "10.0.3",
+    "next-auth": "^3.1.0",
+    "next-seo": "^4.17.0",
+    "nprogress": "^0.2.0",
     "postcss": "^8.1.14",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -23,6 +35,7 @@
     "@storybook/addon-essentials": "^6.1.10",
     "@storybook/addon-links": "^6.1.10",
     "@storybook/react": "^6.1.10",
-    "babel-loader": "^8.2.2"
+    "babel-loader": "^8.2.2",
+    "typescript": "^4.1.2"
   }
 }
