--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "keen-slider": "^5.3.5",
     "next": "10.0.3",
     "next-auth": "^3.1.0",
+    "next-google-fonts": "^1.2.1",
     "next-seo": "^4.17.0",
     "nprogress": "^0.2.0",
     "postcss": "^8.1.14",
