--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/nprogress": "^0.2.0",
     "autoprefixer": "^10.0.4",
     "clsx": "^1.1.1",
+    "fuse.js": "^6.4.3",
     "keen-slider": "^5.3.5",
     "next": "10.0.3",
     "next-auth": "^3.1.0",
@@ -28,6 +29,7 @@
     "postcss": "^8.1.14",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-ticker": "^1.2.2",
     "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
