--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reach/dialog": "^0.12.1",
     "@reach/disclosure": "^0.12.1",
     "@reach/tooltip": "^0.12.1",
+    "@types/next-auth": "^3.1.18",
     "autoprefixer": "^10.0.4",
     "clsx": "^1.1.1",
     "fuse.js": "^6.4.3",
