--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.0.4",
     "clsx": "^1.1.1",
     "fuse.js": "^6.4.3",
+    "mongodb": "^3.6.3",
     "next": "10.0.3",
     "next-auth": "^3.1.0",
     "next-google-fonts": "^1.2.1",
