--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "start": "next start"
   },
   "dependencies": {
     "@reach/alert": "^0.12.1",
@@ -20,6 +18,7 @@
     "autoprefixer": "^10.0.4",
     "clsx": "^1.1.1",
     "fuse.js": "^6.4.3",
+    "keen-slider": "^5.3.5",
     "mongodb": "^3.6.3",
     "next": "10.0.3",
     "next-auth": "^3.1.0",
@@ -33,10 +32,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@storybook/addon-actions": "^6.1.10",
-    "@storybook/addon-essentials": "^6.1.10",
-    "@storybook/addon-links": "^6.1.10",
-    "@storybook/react": "^6.1.10",
     "babel-loader": "^8.2.2",
     "typescript": "^4.1.2"
   }
